force-app/main/default/objects/Document_Template_Section__c/Document_Template_Section__c.object-meta.xml
<CustomObject>
    <label>Document Template Section</label>
    <nameField>
        <label>Document Template Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>