force-app/main/default/objects/Document_Template_Section__c/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <label>ChildObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>