force-app/main/default/objects/Document_Template_Section__c/fields/DisplaySectionName__c.field-meta.xml
<CustomField>
    <fullName>DisplaySectionName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Section Name</label>
    <type>Checkbox</type>
</CustomField>