force-app/main/default/objects/Document_Template_Section__c/fields/Document_Clause__c.field-meta.xml
<CustomField>
    <fullName>Document_Clause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Clause</label>
    <referenceTo>Document_Clause__c</referenceTo>
    <relationshipLabel>Document Template Sections</relationshipLabel>
    <relationshipName>Document_Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>