force-app/main/default/objects/Document_Template_Section__c/fields/External_Document_Clause__c.field-meta.xml
<CustomField>
    <fullName>External_Document_Clause__c</fullName>
    <formula>Document_Clause__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External_Document_Clause</label>
    <type>Text</type>
</CustomField>