force-app/main/default/objects/Document_Template_Section__c/fields/External_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>External_Document_Template__c</fullName>
    <formula>Document_Template__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Document Template</label>
    <type>Text</type>
</CustomField>