force-app/main/default/objects/Document_Template_Section__c/fields/External_RuleID__c.field-meta.xml
<CustomField>
    <fullName>External_RuleID__c</fullName>
    <formula>RuleId__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External RuleID</label>
    <type>Text</type>
</CustomField>