force-app/main/default/objects/Document_Template_Section__c/fields/External_SecVis_Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>External_SecVis_Rule_ID__c</fullName>
    <formula>Section_Visibility_Rule__r.External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External SecVis Rule ID</label>
    <type>Text</type>
</CustomField>