force-app/main/default/objects/Document_Template_Section__c/fields/IsEditable__c.field-meta.xml
<CustomField>
    <fullName>IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEditable</label>
    <type>Checkbox</type>
</CustomField>