force-app/main/default/objects/Document_Template_Section__c/fields/New_Page__c.field-meta.xml
<CustomField>
    <fullName>New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page</label>
    <type>Checkbox</type>
</CustomField>