force-app/main/default/objects/Document_Template_Section__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Section</label>
    <referenceTo>Document_Template_Section__c</referenceTo>
    <relationshipLabel>Document Template Sections</relationshipLabel>
    <relationshipName>Document_Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>