force-app/main/default/objects/Document_Template_Section__c/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Id</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Document Template Sections</relationshipLabel>
    <relationshipName>Document_Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>