force-app/main/default/objects/Document_Template_Section__c/fields/Section_Content__c.field-meta.xml
<CustomField>
    <fullName>Section_Content__c</fullName>
    <label>Section Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>