force-app/main/default/objects/Document_Template_Section__c/fields/Section_Details__c.field-meta.xml
<CustomField>
    <fullName>Section_Details__c</fullName>
    <label>Section Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>