force-app/main/default/objects/Document_Template_Section__c/fields/Section_Visibility_Rule__c.field-meta.xml
<CustomField>
    <fullName>Section_Visibility_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Visibility Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Document Template Sections (Section Visibility Rule)</relationshipLabel>
    <relationshipName>Document_Template_Sections1</relationshipName>
    <type>Lookup</type>
</CustomField>