force-app/main/default/objects/Document_Template_Section__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Context</fullName>
            </value>
            <value>
                <fullName>Related Objects</fullName>
            </value>
            <value>
                <fullName>Clause</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Inner Section</fullName>
                <isActive>false</isActive>
                <label>Inner Section</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>